// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiHue accepts a color 1`] = `
<div
  aria-activedescendant="undefined-saturationIndicator"
  aria-describedby="undefined-saturationDescription"
  aria-label="aria-label"
  aria-roledescription="HSV color mode saturation and value selection"
  class="wuiSaturation testClass1 testClass2"
  data-test-subj="test subject string"
  role="application"
  style="background:hsl(180, 100%, 50%)"
  tabindex="0"
>
  <p
    class="wuiScreenReaderOnly"
  >
    Use the arrow keys to navigate the square color gradient. The coordinates resulting from each key press will be used to calculate HSV color mode 'saturation' and 'value' numbers, in the range of 0 to 1. Left and right decrease and increase (respectively) the 'saturation' value. Up and down decrease and increase (respectively) the 'value' value.
  </p>
  <p
    aria-live="polite"
    class="wuiScreenReaderOnly"
  />
  <div
    class="wuiSaturation__lightness"
  >
    <div
      class="wuiSaturation__saturation"
    />
  </div>
  <div
    class="wuiSaturation__indicator"
    id="undefined-saturationIndicator"
    style="left:0;top:0"
  />
</div>
`;

exports[`WuiHue is rendered 1`] = `
<div
  aria-activedescendant="undefined-saturationIndicator"
  aria-describedby="undefined-saturationDescription"
  aria-label="aria-label"
  aria-roledescription="HSV color mode saturation and value selection"
  class="wuiSaturation testClass1 testClass2"
  data-test-subj="test subject string"
  role="application"
  style="background:hsl(1, 100%, 50%)"
  tabindex="0"
>
  <p
    class="wuiScreenReaderOnly"
  >
    Use the arrow keys to navigate the square color gradient. The coordinates resulting from each key press will be used to calculate HSV color mode 'saturation' and 'value' numbers, in the range of 0 to 1. Left and right decrease and increase (respectively) the 'saturation' value. Up and down decrease and increase (respectively) the 'value' value.
  </p>
  <p
    aria-live="polite"
    class="wuiScreenReaderOnly"
  />
  <div
    class="wuiSaturation__lightness"
  >
    <div
      class="wuiSaturation__saturation"
    />
  </div>
  <div
    class="wuiSaturation__indicator"
    id="undefined-saturationIndicator"
    style="left:0;top:0"
  />
</div>
`;
